<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.glasergl</groupId>
    <artifactId>appointment-helper</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <organization>
        <name>glasergl.de</name>
    </organization>
    <inceptionYear>2026</inceptionYear>

    <modules>
        <module>appointment-helper-util</module>
        <module>appointment-helper-calendar</module>
        <module>appointment-helper-editor</module>
        <module>appointment-helper-reminder</module>
    </modules>
</project>